--- a/client/server/.env
+++ b/client/server/.env
@@ -3,3 +3,20 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=client
 ADMIN_SECRET=superadmin123
+
+# Email Configuration (Outlook SMTP)
+# EMAIL_HOST=smtp.office365.com
+# EMAIL_PORT=587
+# EMAIL_SECURE=false
+# EMAIL_USER=shrutijjadhav4@outlook.com
+# EMAIL_PASS=Shruti@0411
+
+# Alternative Gmail Configuration (uncomment to use)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=shrutijjadhav4@gmail.com
+EMAIL_PASS=ememehzxzocebqrw
+
+# Server Configuration
+PORT=5000
